--- a/classwork/20260210-Ch6_欄與列_切版.html
+++ b/classwork/20260210-Ch6_欄與列_切版.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Ch.6 欄與列 (切版)</title>
+        <title>Ch.6 欄與列_切版</title>
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/My Textured color scheme.css" />
         <style>
